Jan 10 2003  3.1.0  Started implementing wsp100 snmp calls in new framework
                    Added sanity checks to ExecSysCmd() calls in pcapsource
Jan 09 2003  3.1.0  Merged patch from Bjarke Pederson for different sounds for
                     new wepped networks
Jan 07 2003  3.1.0  Fixed more wep keysize bugs
Jan 04 2003  3.1.0  Changed probe network autogrouping to not group when there
                     is only 1 probe network
Jan 03 2003  3.1.0  Fixed nullproberesp alert
                    Fixed segfault if acpi/ACAD/ not found
                    Merged patch from Million adding more ACPI support
                    Merged patch from Million with numerous variable init
                     and other memory checks to kismet_server
                    Added more defaults to ap_manuf file
                    Added type counts and percentages to gpsmap legends
Jan 02 2004  3.1.0  Fixed association of probe nets
                    Fixed weirdness with now-defunct quality bar
                    Fixed map legends w/ no network colors and no powerbar
Jan 01 2004  3.1.0  Added legend drawing to GPSMap, finally
                    Various speedups inside gpsmap
                    Readme updates
                    Fixed legend drawing eating one map file
                    Significant speed boosts to gpsmap filtering
                    Changed algo.h sort() calls to stable_sort(). This seems
                     to be a bug in some gcc versions that causes segfaults.
                    Moved most of gpsmaps messages into the 'verbose' setting
                     (gpsmap -v ... )
                    Revamped column positioning code for gpsmap legends
                    Fixed missing '/' in pcapsource wlanng (thanks falter)
                    Merged patch from Million fixing memory and var init bugs
                     in panels and goto calls.
Dec 27 2003  3.1.0  Fixed remembering probe networks associated by data packets