@@ -1,6 +1,7 @@
 Jan 10 2003  3.1.0  Started implementing wsp100 snmp calls in new framework
                     Added sanity checks to ExecSysCmd() calls in pcapsource
-Jan 09 2003  3.1.0  Merged patch from Bjarke Pederson for different sounds for
+                    Added coloring of decloaked networks to panelfront
+Jan 09 2003  3.1.0  Merged patch from Bjarke Pedersen for different sounds for
                      new wepped networks
 Jan 07 2003  3.1.0  Fixed more wep keysize bugs
 Jan 04 2003  3.1.0  Changed probe network autogrouping to not group when there
